# Oryon

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DATA_MODEL.md  FEATURES.md  MODEL_ENGINE.md  ROADMAP.md  STYLE_GUIDE.md  TOOL_SYSTEM.md  UI_SPEC.md
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  chat.rs  engine.rs  fs_browse.rs  git.rs  hub.rs  message.rs  mod.rs  pty.rs  tools.rs  workspace.rs
src-tauri/src/db/: mod.rs  schema.rs  types.rs
src-tauri/src/engine/: hardware.rs  mod.rs
src-tauri/src/hub/: download.rs  hf_api.rs  mod.rs
src-tauri/src/tools/: executor.rs  file_ops.rs  git_ops.rs  mod.rs  sandbox.rs  search_ops.rs  shell_ops.rs
src/components/agents/: AgentConfigView.tsx
src/components/chat/: AgentSelector.tsx  ChatInput.tsx  ChatView.tsx  CollapsedToolBlock.tsx  ContextIndicator.tsx  MarkdownContent.tsx  MessageBubble.tsx  MessageList.tsx  ThinkingBubble.tsx  ToolCallBubble.tsx
src/hooks/: useActiveWorkspacePath.ts  useGlobalShortcuts.ts
src/lib/: tauri.ts
src/lib/ipc/: fs.ts  (+11 more)
src/stores/: agentStore.ts  chatStore.ts  engineStore.ts  modelHubStore.ts  settingsStore.ts  uiStore.ts  workspaceStore.ts
src/styles/: index.css
(+23 files in other folders)
