[package]
name = "oryon"
version = "0.1.0"
description = "Local-first AI coding assistant"
authors = ["Luke"]
license = "MIT"
repository = "https://github.com/lulkebit/Oryon"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "oryon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1"
uuid = { version = "1", features = ["v7"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
log = "0.4"
tauri-plugin-dialog = "2.7.0"
llama-cpp-4 = { version = "0.2.26", features = ["metal"] }
sysinfo = "0.36.1"
encoding_rs = "0.8.35"
reqwest = { version = "0.13.2", features = ["stream", "json"] }
urlencoding = "2.1.3"
futures-util = "0.3.32"
glob = "0.3.3"
sha2 = "0.10"
